--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input type="tel" id="phone" placeholder="Phone Number" required />
         <label>
           <input type="checkbox" id="terms" />
-          I agree to the <a href="https://mouhmedsangak.com/" target="_blank">terms & conditions</a>
+          I agree to the <a href="https://mahmedsangak.github.io/anydesk-site/Terms%20and%20Conditions.html" target="_blank">terms & conditions</a>
         </label>
         <button type="submit">Login</button>
       </form>
